[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
async-io = "1.6.0"
async-std = {version = "1.10.0", features = ["attributes"]}
env_logger = "0.9.0"

tokio = { version = "1.17.0", features = ["full"] }
libp2p = { version = "0.43.0", features = ["tcp-tokio"] }
